@startuml

title __LEVEL6_3's Class Diagram__\n

  namespace decoupling.levels.level6_3 {
    interface decoupling.levels.level6_3.Consumer {
        {abstract} + consume()
        {abstract} + setServiceA()
        {abstract} + setServiceB()
    }
  }
  

  namespace decoupling.levels.level6_3 {
    class decoupling.levels.level6_3.ConsumerImpl {
        + consume()
        + setServiceA()
        + setServiceB()
    }
  }
  

  namespace decoupling.levels.level6_3 {
    class decoupling.levels.level6_3.Main {
        {static} + main()
    }
  }
  

  decoupling.levels.level6_3.ConsumerImpl .up.|> decoupling.levels.level6_3.Consumer
  decoupling.levels.level6_3.ConsumerImpl o-- decoupling.levels.level6_3.service.ServiceA : serviceA
  decoupling.levels.level6_3.ConsumerImpl o-- decoupling.levels.level6_3.service.ServiceB : serviceB


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
